UHF-9055: Fix spacing issue with poliymaker search app.

--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/form/_form.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/form/_form.scss
@@ -54,6 +54,11 @@
   }
 }
 
+.content-lower .policymaker-search .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .paatokset-search--frontpage {
   div[class*='SearchBarWrapper_SearchBarWrapper'] {
     max-width: 100%;
